test: github actions

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,7 +20,7 @@ jobs:
         node --version
         cd ./user-fe
         npm install
-        npm run test
+        npm run test:ci
 
   push-on-success:
     runs-on: ubuntu-latest
