--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,3 +16,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.10.0"
+
+      - name: Run tests
+        run: npm run test
